--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <header role= 'Banner'>
+    <header role= 'banner'>
       <div class="logos">
         <a href="index.html">
           <img class="logo" src="http://cdn.shopify.com/s/files/1/0257/6087/products/Avengers-Icon_front_Single_Front.png?v=1523939355" alt="avengers icon"/>
